--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "install": "^0.13.0",
     "local-storage": "^2.0.0",
     "react": "^16.13.1",
+    "react-animated-number": "^0.4.4",
+    "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-fade-in": "^1.1.0",
+    "react-flip-numbers": "^3.0.5",
     "react-scripts": "3.4.1",
+    "react-split-flap-display": "^0.3.2",
+    "styled-components": "^5.1.1",
     "use-sound": "^1.0.2"
   },
   "scripts": {
