--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "install": "^0.13.0",
     "local-storage": "^2.0.0",
+    "ordinal": "^1.0.3",
     "react": "^16.13.1",
     "react-animated-number": "^0.4.4",
     "react-countup": "^4.3.3",
