--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-fade-in": "^1.1.0",
+    "react-fader": "^3.1.1",
     "react-flip-numbers": "^3.0.5",
     "react-scripts": "3.4.1",
     "react-split-flap-display": "^0.3.2",
